k8s-templates/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    env: production
