k8s-templates/service-nodeport.yml
# exposes on a static port on each node — nodePort range: 30000-32767
apiVersion: v1
kind: Service
metadata:
  name: my-app-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
